Fix bar size on mobile

--- a/source/_scss/partials/_controls.scss
+++ b/source/_scss/partials/_controls.scss
@@ -147,7 +147,7 @@
         line-height: 2.0rem;
     }
 
-    @include mq($until: tablet) {
+    @include mq(mobile, tablet) {
         font-size: 1.6rem;
         line-height: 2.2rem;
     }
